--- a/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
+++ b/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
@@ -7,7 +7,7 @@
 - 血液：红色粘稠液体，占成人体重的7-8%
 - 若将人类的新鲜血液放入盛有少量抗凝剂[^抗凝剂]的试管内静置一段时间，试管中会分层
   - 上层：**血浆** - **透明、淡黄色**的液体
-    - 占血液总量的55%，其90%以上是水，其余是蛋白质、葡萄糖、无机盐、废料[^废料]等
+    - 占血液总量的55%，其90%以上是水，其余是血浆蛋白、蛋白质、葡萄糖、无机盐、废料[^废料]等
     - 血浆的主要功能是**运载血细胞、运输营养物质和二氧化碳等代谢产物**
 
   - 下层：**血细胞** - 呈暗红色
@@ -18,22 +18,23 @@
 
 - ##### 红细胞
 
-  - 血细胞中数量最多
-  - 成熟的红细胞没有细胞核、呈两面凹的圆盘形
+  - 血细胞中**数量最多**
+  - 成熟的红细胞**没有细胞核**、呈**两面凹的圆盘形**
   - 有**红色含铁的蛋白质**——**血红蛋白**，使**血液呈红色**
     - 血红蛋白在氧浓度高的地方容易跟氧结合，在氧浓度低的地方容易跟氧分离
-    - 血红蛋白帮助人体**运输氧气**
+    - 血红蛋白帮助人体**运输氧气**和部分二氧化碳
   - 贫血：血液里**红细胞的数量过少**，或红细胞中**血红蛋白过少**
 
 - ##### 白细胞
 
-  - 比红细胞大，有细胞核，数量比红细胞少得多
-  - 人体中含有多种白细胞以**抵抗病菌的侵入**
+  - 比红细胞大，**有细胞核**，**数量最少**
+  - 白细胞可以**吞噬病菌**，人体中含有多种白细胞以**抵抗病菌的侵入**
 
 - ##### 血小板
 
-  - 血细胞中体积最小，没有细胞核
+  - 血细胞中**体积最小**，没有细胞核，形状不规则
   - 人体受伤流血时，血小板会在伤口聚集成团，促进**止血和加速血液凝固**
+  - 过少：影响止血功能、危及生命；过多：易造成血栓
 
 
 - 人体内的血细胞在不断衰老、死亡和再生
@@ -50,12 +51,13 @@
     | :--: | :------------------------------: |
     | 炎症 |       白细胞数值超过正常值       |
     | 贫血 | 红细胞计数及血红蛋白数值都会下降 |
+    | 血栓 |            血小板过多            |
 
 - 血液的功能
 
-  - 输送氧、各种营养物质及二氧化碳等代谢产物
-  - 起防御保护作用
-  - 调节体温
+  - **输送氧、各种营养物质及二氧化碳等代谢产物**
+  - **起防御保护作用**
+  - **调节体温**
 
 ### 10.1.2 血型与输血
 
@@ -85,13 +87,15 @@
 
   - 输血时须先进行**交叉配血实验**
     - 交叉配血实验考虑供血者的红细胞上抗原是否会和受血者血浆中的抗体发生凝集作用
-
-  - 输血时应该以输同型血为原则
+    - **O型血**的**红血球因不含抗原**而成为**全适的输血者**
+    
+  - **输血时应该以输同型血为原则**
 
 
 ## 10.2 血管和心脏
 
 - **心脏和血管**构成了**人体血液循环的管道**
+- 血液能不停按照一定方向流动
 
 ### 10.2.1 血液流动的管道——血管
 
@@ -99,11 +103,11 @@
 
 - 血管分为**动脉、静脉和毛细血管**三种
 
-- |      |               动脉               |                             静脉                             |                           毛细血管                           |
-  | ---- | :------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
-  | 功能 |    把血液送到全身各器官的血管    |               把血液从全身各器官送回心脏的血管               |              血液和组织细胞间进行物质交换的场所              |
-  | 特征 |  管壁厚、弹性大、管内血流速度快  | 管壁薄、弹性小、管腔大、管内血流速度慢。管腔内有半月形的静脉瓣，防止血液倒流 | 管壁极薄，仅有一层上皮细胞构成，管径极细，一般只允许红细胞排成单行通过 |
-  |      | 颈部：颈动脉；腕部：桡 (ráo)动脉 |                    皮肤下的“青筋”就是静脉                    |               连接在细小的动脉和静脉之间的血管               |
+- |      |                   动脉                   |                             静脉                             |                           毛细血管                           |
+  | ---- | :--------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
+  | 功能 |        把血液送到全身各器官的血管        |               把血液从全身各器官送回心脏的血管               |              血液和组织细胞间进行物质交换的场所              |
+  | 特征 | 管壁厚、弹性大、管内血流速度快、血压最大 | 管壁薄、弹性小、管腔大、管内血流速度慢。管腔内有半月形的静脉瓣，防止血液倒流 | 管壁极薄，仅有一层上皮细胞构成，管径极细，一般只允许红细胞排成单行通过 |
+  |      |     颈部：颈动脉；腕部：桡 (ráo)动脉     | 皮肤下的“青筋”就是静脉。抽血、注射疫苗都在静脉，静脉靠近皮肤，血流速度较慢，安全性较高 |               连接在细小的动脉和静脉之间的血管               |
   
 
 ### 10.2.2 血液运输的动力器官——心脏
@@ -126,6 +130,7 @@
   - 心房和心室之间的**房室瓣**会**防止血液倒流回心房**
 - 当左右**心室收缩**，左右**心房舒张**时
   - **左心室**会把**血液压入主动脉**输送到**全身**
+    - 被毒蛇咬伤时应该包扎在近心端，减少或者避免毒素进入血液循环的可能
   - **右心室**会把**血液压入肺动脉**送往**肺部**
 - **心脏的搏动**推动着**血液流动**，是**血液运输的动力器官**
   - 颈动脉和桡动脉的搏动与心脏的跳动有关，**心脏每跳动一次，颈动脉和桡动脉就相应的搏动一次**
@@ -148,7 +153,7 @@
 
 #### 冠心病
 
-- **心肌运动**需要**能量**，**冠状动脉供应**心脏本身营养需要的动脉
+- **心肌运动**需要**能量**，**冠状动脉供应**心脏本身**营养**需要的动脉
 - **冠心病**：**冠状动脉发生病变**，如动脉硬化、管腔变窄、导致心肌缺血
 - **冠心病严重**时会引起**心绞痛**甚至发生**心肌梗死**
 - 若**冠状动脉被阻断**，**心跳**很快就会**停止**
@@ -270,7 +275,7 @@
 
 #### 淋巴循环
 
-- 淋巴经各级淋巴管和淋巴结后，汇入**锁骨下静脉**，进入血液循环
+- 淋巴经各级淋巴管和淋巴结后，汇入***锁骨下静脉***（上腔静脉），**进入血液循环**
 - 淋巴循环时**单向流动**而不形成真正的循环
 - 淋巴循环中，**淋巴结**是**淋巴回流的重要滤器**
   - 淋巴结内的淋巴细胞能**吞噬细菌及其他引起疾病的微生物**
@@ -278,13 +283,63 @@
 
 ## 10.5 人体的排泄
 
-- 排泄：将体内物质代谢的终产物、多余的物质以及进入人体内的异物，经血液循环由一定的途径排出体外的过程
-- 排泄通过泌尿系统、肺和皮肤进行
+- 排泄：将**体内物质的代谢废物**，**经血液循环**由一定的途径排出体外的过程
+- 排泄通过**泌尿系统、肺和皮肤**进行
 
 ### 10.5.1 泌尿系统的组成
 
-- 主要功能：形成尿液和排出尿液
-- 
+- 主要功能：**形成尿液**和**排出尿液**
+- ![泌尿系统](https://i.ibb.co/3WbspmC/image.png)
+- **肾脏：*形成尿液*的器官**、过滤血液
+  - ![肾的纵切面图](https://i.ibb.co/1R8cySX/image.png)
+  - 位于人**腰后部脊柱两侧，左右各一个**
+  - 形似**蚕豆**，呈**红褐色**
+  - 肾皮质位于肾的浅层，呈红褐色
+  - 肾髓质位于肾皮质的深部，色较淡
+  - **肾盂**（yú）位于肾的内侧凹陷处，**下端连着输尿管**
+  - **血液**流经肾脏时会**被过滤**
+    - **吸收**葡萄糖、氨基酸、水分等**有用的物质**
+    - **无用的废物**如*尿素、尿酸*和*多余的水分及矿物盐*则**形成尿液**
+
+  - 能**自动调节尿液的成分**
+    - 大量饮水后尿液中水含量较高
+    - 每天需喝足多的水，让体內产生的废物如尿素能及时排出体外
+
+- **输尿管**：**输送尿液**的器官，上接肾盂，下连膀胱
+- **膀胱**：**贮存尿液**
+- **尿道**：**尿液从膀胱排出体外的通道**
+- **排尿**
+  - **排出废物**
+  - **调节体内的水和无机盐的平衡**
+  - **维持组织细胞的正常生理功能**
+
+- 当**人体肾功能发生某些障碍**，**不能将血液中的尿素等代谢废物排出**时，人体就会**中毒**
+  - 对于严重肾功能障碍者：**人工肾、肾移植**
+    - **洗肾**（人工肾）：肾元失去功能，病患需要**血液解析**以**排出血液中的废物和杂质**
+
+### 10.5.2 皮肤与汗液分泌
+
+- **皮肤**通过汗液排出代谢废物
+- 汗液的主要成分为水，其次为无机盐和尿素等
+- **肺**也具有排泄作用
+
+## 10.6 植物的排泄作用
+
+### 10.6.1 二氧化碳和氧气的释放
+
+- 植物**没有排泄系统**，但**有排泄作用**
+- 植物体时刻都在进行**呼吸作用**，在光照条件下进行**光合作用**，并将呼吸作用产生的二氧化碳和光合作用制造的氧气释放到空气中
+- **植物体的排泄作用**：**排出二氧化碳**和**释放多余的氧气**
+  - 植物体还会通过**蒸腾作用**排出水分【植物从根部吸收的99%的水分都将排出体外】
+    - 促进植物体从土壤中吸收水分
+    - 促进水分和无机盐的运输
+    - 使植物体有效的散热
+
+### 10.6.3 植物的分泌物
+
+- 某些**植物细胞在代谢过程**会合成**分泌物**
+- 如糖类、挥发油、有机酸、树脂、油类、蛋白质、酶等
+- 许多植物的分泌物都具有重要**经济价值**
 
 [^抗凝剂]: 如：柠檬酸钠，防止血液凝固
 [^废料]: 如：尿素、尿酸等等
