--- a/Science Notes/J3 Science Notes/7 能量的转化与守恒.md
+++ b/Science Notes/J3 Science Notes/7 能量的转化与守恒.md
@@ -25,10 +25,11 @@
 
 #### 气体对外做功实验
 
-![气体对外做功实验](https://i.ibb.co/ZX6TBFn/image.png)
+- ![气体对外做功实验](https://i.ibb.co/ZX6TBFn/image.png)
+- 瓶内：少量水 + 几滴酒精
 
-- 向瓶内打气，热能上升，温度上升，酒精汽化
-- 压缩气体对瓶塞做功，气体热能降低
+- 向瓶内打气，热能上升，温度上升，酒精汽化，压力增大【机械能 ——> 热能】
+- 压缩气体对瓶塞做功，气体热能减少【热能 ——> 机械能】
 - 瓶内热能减少，温度降低，水蒸气和酒精蒸气液化成小水滴，出现白雾
 - 机械能 → 热能 → 机械能
 
@@ -72,6 +73,10 @@
 - 飞机的空调系统需先对这些热空气进行制冷再引入舱内
 - 机械能 → 热能
 
+#### 火力发电
+
+- 化学能 ——> 热能 ——> 机械能 ——> 电能
+
 ### 小总结
 
 |        |          做功          |             热传递             |
@@ -98,6 +103,7 @@
 
 - **电流越大，电阻越大，通电时间越长，产生的电热就越多**
 - Q ∝ IRt
+- *课本131页实验*
 - 影响电阻的因素
   - 横截面积、材质、长度
   - 横截面积越小，长度越长，电阻就越大
@@ -110,7 +116,18 @@
 - **能量既不会消灭，也无法被创造**
 - 能量会从一种形式*转化*为另一种形式，或者从一个物体*转移*到另一个物体。而**能量总量在转化和转移的过程中保持不变**
 
-### 永动机
+### 核能与太阳能
+
+- 核能：原子核在分裂或聚合的过程会释放出巨大的能量
+- 核能发电：核能（核裂变） ——> 热能 ——> 动能 ——> 电能
+- 太阳能（核聚变）【电磁辐射能】——> 光年 + 热能【光热都属于电磁波】
+
+### 单摆
+
+- 单摆从A点自由释放后，摆到右边时**不会达到比A点更高的位置**，因为依据能量转化和守恒定律，过程中**没有能量增加**则单摆摆球不会达到比A点更高的位置
+- 单摆摆到右边所达到的最高位置也**不会和A点等高**，因为有**空气的阻力**，部分的能量会转化为空气和摆球的热能
+
+### **永动机**
 
 - 永动机：不需要消耗燃料，不需要外界提供动力，就可源源不断地对外做功
 - ***不可能会实现***，证明了能量在转化过程中总量是守恒的
