--- a/Science Notes/J3 Science Notes/8 食物与营养.md
+++ b/Science Notes/J3 Science Notes/8 食物与营养.md
@@ -84,13 +84,13 @@
 
 ##### 熊的冬眠
 
-- 熊在冬眠后会消瘦很多是因为熊是恒温动物，在冬眠状态下仍需不断消耗能量，维持体温
+- 熊在冬眠后会消瘦很多是因为熊是恒温动物，在冬眠状态下仍需不断消耗能量，维持体温，熊在冬天不进
 
 #### 维生素
 
 - 包括维生素A、B、C、D、E、K等
 - 不提供能量、但参与人体内许多重要的生理活动，对保持身体健康作用很大
-- 人体内只可合成维生素D，其余维生素都需从食物中获得
+- **人体**内只可**合成维生素D**，**其余维生素**都需从**食物中获得**
 - | 水溶性维生素 | 脂溶性维生素 |
   | :----------: | :----------: |
   |     B、C     |  A、D、E、K  |
