--- a/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
+++ b/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
@@ -87,6 +87,9 @@
 
   - 输血时须先进行**交叉配血实验**
     - 交叉配血实验考虑供血者的红细胞上抗原是否会和受血者血浆中的抗体发生凝集作用
+    - 主侧：受血者血清加供血者红细胞悬液
+    - 次侧：供血者血清加受血者红细胞悬液
+    - 交叉配血试验的过程中，若主侧的结果是没有凝集作用需继续进行次侧
     - **O型血**的**红血球因不含抗原**而成为**全适的输血者**
     
   - **输血时应该以输同型血为原则**
@@ -248,19 +251,19 @@
 ##### 脾
 
 - 位于腹腔左上方、呈紫红色，扁圆形
-- 体内最大的淋巴器官
-- 有破坏衰老血细胞的作用
+- 体内**最大的淋巴器官**
+- 有**破坏衰老血细胞的作用**
 
 ##### 胸腺
 
 - 位于胸骨后面
-- 能分泌胸腺激素，促使淋巴细胞发育成熟
+- 能分泌**胸腺激素**，促使**淋巴细胞发育成熟**
 
 ##### 扁桃体
 
-- 位于消化道和呼吸道的交汇处
-- 具有淋巴结
-- 具有抗细菌、抗病毒的防御功能
+- 位于**消化道和呼吸道的交汇处**
+- 具有**淋巴结**
+- 具有抗细菌、抗病毒的**防御功能**
 
 ##### 淋巴结
 
@@ -299,12 +302,13 @@
   - **肾盂**（yú）位于肾的内侧凹陷处，**下端连着输尿管**
   - **血液**流经肾脏时会**被过滤**
     - **吸收**葡萄糖、氨基酸、水分等**有用的物质**
-    - **无用的废物**如*尿素、尿酸*和*多余的水分及矿物盐*则**形成尿液**
-
+    - **废物**如*尿素、尿酸*和*多余的水分及矿物盐*则**形成尿液**
+      - **尿素**是**肝脏**形成的
+    
   - 能**自动调节尿液的成分**
     - 大量饮水后尿液中水含量较高
     - 每天需喝足多的水，让体內产生的废物如尿素能及时排出体外
-
+  
 - **输尿管**：**输送尿液**的器官，上接肾盂，下连膀胱
 - **膀胱**：**贮存尿液**
 - **尿道**：**尿液从膀胱排出体外的通道**
@@ -335,7 +339,7 @@
     - 促进水分和无机盐的运输
     - 使植物体有效的散热
 
-### 10.6.3 植物的分泌物
+### 10.6.2 植物的分泌物
 
 - 某些**植物细胞在代谢过程**会合成**分泌物**
 - 如糖类、挥发油、有机酸、树脂、油类、蛋白质、酶等
