--- a/Geography Notes/J2 Geography Notes/8 地形与生活.md
+++ b/Geography Notes/J2 Geography Notes/8 地形与生活.md
@@ -11,7 +11,7 @@
 
 ## 8.2 长江流域地形资源的应用
 
-![image-20220312145908156](C:\Users\wongj\Documents\Typora\Geography Notes\J2 Geography Notes\image-20220312145908156.png)
+![长江](https://i.ibb.co/PmSYVFx/image.png)
 
 - **长江**提供**发电、灌溉、航运、旅游**等功能，被称为“**黄金水道**”
 - 发源于**唐古拉山脉主峰格拉丹东峰**下，全场 **6300 多公里**，是**中国第一长河**
@@ -19,7 +19,7 @@
 
 ### 长江上游
 
-![image-20220312150226455](C:\Users\wongj\Documents\Typora\Geography Notes\J2 Geography Notes\image-20220312150226455.png)
+![长江三峡](https://i.ibb.co/Rv92SLS/image.png)
 
 - **宜昌以上**为**长江上游**
 - **多峡谷、水力资源丰富、建有三峡水坝**
@@ -48,7 +48,7 @@
 
 ### 长江下游
 
-![image-20220312150939289](C:\Users\wongj\Documents\Typora\Geography Notes\J2 Geography Notes\image-20220312150939289.png)
+![长江三角洲](https://i.ibb.co/SmCzWDb/image.png)
 
 - **江阔水深、河湖密集**，是**中国最主要的内河航道**
 
@@ -59,7 +59,7 @@
 
 ## 8.3 荷兰的围海造田
 
-![image-20220312151459530](C:\Users\wongj\Documents\Typora\Geography Notes\J2 Geography Notes\image-20220312151459530.png)
+![荷兰](https://i.ibb.co/GTfDYrK/image.png)
 
 - 位于**欧洲西部的沿海地区**，有“**低地国**”之称
 - 首都：**阿姆斯特丹**；港口：鹿特丹
