--- a/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
+++ b/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
@@ -109,8 +109,8 @@
 - |      |                   动脉                   |                             静脉                             |                           毛细血管                           |
   | ---- | :--------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
   | 功能 |        把血液送到全身各器官的血管        |               把血液从全身各器官送回心脏的血管               |              血液和组织细胞间进行物质交换的场所              |
-  | 特征 | 管壁厚、弹性大、管内血流速度快、血压最大 | 管壁薄、弹性小、管腔大、管内血流速度慢。管腔内有半月形的静脉瓣，防止血液倒流 | 管壁极薄，仅有一层上皮细胞构成，管径极细，一般只允许红细胞排成单行通过 |
-  |      |     颈部：颈动脉；腕部：桡 (ráo)动脉     | 皮肤下的“青筋”就是静脉。抽血、注射疫苗都在静脉，静脉靠近皮肤，血流速度较慢，安全性较高 |               连接在细小的动脉和静脉之间的血管               |
+  | 特征 | 管壁厚、弹性大、管内血流速度快、血压最大 | 管壁薄、弹性小、管腔大、管内血流速度慢、血压最小。管腔内有半月形的静脉瓣，防止血液倒流 | 管壁极薄，仅有一层上皮细胞构成，管径极细，一般只允许红细胞排成单行通过 |
+  |      |     颈部：颈动脉；腕部：桡 (ráo)动脉     | 皮肤下的“青筋”就是静脉。抽血、注射疫苗都在静脉，静脉靠近皮肤，血流速度较慢，安全性较高 |  连接在细小的动脉和静脉之间的血管、毛细血管血压 > 静脉血压   |
   
 
 ### 10.2.2 血液运输的动力器官——心脏
@@ -224,7 +224,7 @@
 
 #### **血压**
 
-- 血液在血管内向前流动时对血管壁产生的压强
+- 血液在血管内向前流动时**对血管壁产生的压强**
 - 血压是不断变化的
 - 收缩压：心脏收缩时动脉血液达到的最高值
 - 舒张压：心脏舒张时动脉血液达到的最低值
@@ -236,6 +236,7 @@
 ## 10.4 淋巴循环
 
 - 淋巴循环是血液循环的辅助部分
+- 淋巴循环的动力来源：心脏、血压
 
 ### 10.4.1 淋巴系统的组成
 
@@ -268,8 +269,9 @@
 ##### 淋巴结
 
 - 扁圆形或椭圆形的小体
-- 沿着淋巴管分布
+- 沿着淋巴管分布，淋巴管上的膨大的部分
 - 在人的颈部、腹股沟和腋窝密集
+- 内有淋巴球，会过滤淋巴
 - 细菌侵入人体发生感染时，淋巴结会**肿大疼痛**
   - 如喉咙发炎时，下巴颏下会有两个肿块，就是淋巴结
   - 炎症消失后是，淋巴结肿快会自然缩小
@@ -310,7 +312,7 @@
     - 每天需喝足多的水，让体內产生的废物如尿素能及时排出体外
   
 - **输尿管**：**输送尿液**的器官，上接肾盂，下连膀胱
-- **膀胱**：**贮存尿液**
+- **膀胱**：**贮存尿液**，平滑肌构成的囊状器官
 - **尿道**：**尿液从膀胱排出体外的通道**
 - **排尿**
   - **排出废物**
