--- a/Science Notes/J3 Science Notes/7 能量的转化与守恒.md
+++ b/Science Notes/J3 Science Notes/7 能量的转化与守恒.md
@@ -119,8 +119,8 @@
 ### 核能与太阳能
 
 - 核能：原子核在分裂或聚合的过程会释放出巨大的能量
-- 核能发电：核能（核裂变） ——> 热能 ——> 动能 ——> 电能
-- 太阳能（核聚变）【电磁辐射能】——> 光年 + 热能【光热都属于电磁波】
+- 核能发电：核能（核裂变） ——> 热能 ——> 动能（机械能） ——> 电能
+- 太阳能（核聚变）【电磁辐射能】——> 光能 + 热能【光热都属于电磁波】
 
 ### 单摆
 
