--- a/Science Notes/J3 Science Notes/8 食物与营养.md
+++ b/Science Notes/J3 Science Notes/8 食物与营养.md
@@ -11,7 +11,7 @@
 | 还原糖[^1] |      斐林试剂       |  砖红色沉淀  |
 |  多糖[^2]  |        碘液         |    深蓝色    |
 |   蛋白质   |     双缩脲试剂      |     紫色     |
-|    脂肪    |     苏丹III溶液     |    橘黄色    |
+|    脂肪    | 苏丹III<u>染液</u>  |    橘黄色    |
 |  维生素C   | 吲哚酚试剂/高锰酸钾 | 逐渐变为无色 |
 
 [^1]: 葡萄糖、果糖、麦芽糖等
@@ -54,12 +54,12 @@
 - 保证**人体维持正常生理活动**
 - 大多数的无机盐以离子形式存在人体中
 
-| 缺乏的矿物质 |                    症状                    |
-| :----------: | :----------------------------------------: |
-|     缺碘     | 成人：甲状腺肿大、儿童：呆小症（智力低下） |
-|     缺钙     |        少儿：佝偻病、成人：骨质疏松        |
-|     缺锌     |         儿童味蕾功能下降，食欲减弱         |
-|     缺铁     |                    贫血                    |
+| 缺乏的矿物质 |                        症状                        |
+| :----------: | :------------------------------------------------: |
+|   缺**碘**   | 成人：**甲状腺肿大**、儿童：**呆小症**（智力低下） |
+|   缺**钙**   |        少儿：**佝偻病**、成人：**骨质疏松**        |
+|   缺**锌**   |           儿童味蕾功能下降，**食欲减弱**           |
+|   缺**铁**   |                      **贫血**                      |
 
 #### 糖类
 
