j2 geo chp 1 - 3 done

--- a/Geography Notes/J2 Geography Notes/2 陆地与海洋.md
+++ b/Geography Notes/J2 Geography Notes/2 陆地与海洋.md
@@ -6,6 +6,10 @@
 
 - 地球上**七分是海洋**，**三分是陆地**
 
+- **陆地**主要集中在**北半球**
+
+- **北极**是**海洋**、**南极**是**陆地**
+
 ## **2.2 地球上的陆地是什么样子的呢？**
 
 ### **2.2.1 陆地**
@@ -96,3 +100,6 @@
   2. 面积广阔
   3. **深度超过2000米**
 - ![海洋地形](https://i.ibb.co/LYV8CKJ/image.png)
+- ![海底地形剖面图](https://i.ibb.co/Rh1689t/image.jpg)
+  - 甲：大陆棚
+  - 丁：海沟
