--- a/Geography Notes/J2 Geography Notes/3 移动的大陆.md
+++ b/Geography Notes/J2 Geography Notes/3 移动的大陆.md
@@ -12,7 +12,12 @@
   
   - 经过漫长的岁月，逐渐形成了今天**七大洲四大洋**的分布状况
   
-  - 根据大陆漂移学说，地中海会消失
+  - 根据大陆漂移学说，**红海会扩大，地中海会消失**
+    - ![地中海红海](https://i.ibb.co/2PWgMhL/image.png)
+    - **红海不断扩张**是由于**非洲板块和印度洋板块**的**张裂拉伸**
+    - **地中海在不断缩小**是由于**非洲板块**和**亚欧板块**的**挤压碰撞**
+    
+  
 
 ### **3.1.2 板块构造学说**
 
@@ -20,46 +25,80 @@
 
 - 地球表层并**不是整体一块**，而是**分为六大板块**
   - 即**亚欧板块**、**印度洋板块**、**非洲板块**、**美洲板块**、**南极洲板块**、**太平洋板块**
+- 板块**漂浮在岩浆上**、**内部较稳定**
 
 ### **3.2 板块移动的结果**
 
 ![岩浆对流作用](https://i.ibb.co/kH3qd3v/image.png)
 
+- 地幔内的热力使岩浆产生强烈的**对流作用**
+- 这种**内力作用**形成**挤压力和张力**，使到**板块**之间产生**碰撞或张裂**，带动板块向不同的方向缓慢移动
+  - **内力作用**
+    - 能量来自于**地球内部的热能**
+    - 形成**山脉、断层山、裂谷、海沟、火山、地震**等
+
 ### **3.2.1 褶曲山脉**
 
 ![褶曲作用](https://i.ibb.co/7G1MNS6/image.png)
 
-- 当两个板块相互碰撞，强大的挤压力造成褶曲作用，是板块上的岩层产生褶皱，形成褶曲山脉
+- 当两个**板块相互碰撞**，强大的**挤压力**造成**褶曲作用**，是板块上的**岩层产生褶皱**，形成**褶曲山脉**
 
-- 如喜马拉雅山脉、阿尔卑斯山脉、洛基山脉、安地斯山脉
+- 褶曲作用形成的山脉：**喜马拉雅山脉、阿尔卑斯山脉、洛矶山脉、安地斯山脉**
+
+- ![褶曲山脉](https://i.ibb.co/jMjN5W0/image.jpg)
+  - *四个新褶曲山脉 + 东非大裂谷*
+
+
+#### 喜马拉雅山脉的形成
+
+- 喜马拉雅山脉几千万年前还是一片汪洋大海
+- 地幔岩浆的**对流作用**拖动**印度洋板块北移向亚欧板块推挤**
+- 强烈的**挤压力**把两块板块之间的海水挤出，海底隆起抬高，才成为今天雄伟高峻的褶曲山脉
 
 ### **海沟**
 
-- 当海洋板块和陆地板块互相碰撞，海洋板块向下弯曲被挤压陷入地幔，就形成一条又长又深的海沟
-- 多分布在海洋板块和陆地板块的相撞处
-- **马利安纳海沟**是世界最深的海沟
+- 当**海洋板块和陆地板块互相碰撞**，**海洋板块向下弯曲**被挤压**陷入地幔**，就形成一条又长又深的**海沟**
+- 多**分布在海洋板块和陆地板块的相撞处**
+- 世界最深的海沟：**马利安纳海沟**
 
 ### **3.2.2 断层山**
 
-- 两个板块碰撞或拉张时，巨大的横压力或张力使岩层发生断裂，造成断层。巨大的岩块受挤上升，形成断层山
-- 如**欧洲莱茵河上游的黑森林和佛日山地**就是最好的例子
+- 两个**板块碰撞或拉张**时，**巨大的横压力或张力**使岩层发生**断裂**，造成**断层**。巨大的**岩块受挤上升**，形成**断层山**
+- ![莱茵河谷的位置](https://i.ibb.co/YNT5FGh/image.png)
+- 例：欧洲**莱茵河上游**的**黑森林**和**佛日山地**
 
 ### **3.2.3 裂谷**
 
-- 两个板块彼此拉张，板块张裂形成狭长深陷的谷底，称为裂谷
+- 两**个板块彼此拉张**，**板块张裂**形成**狭长深陷的谷底**，称为**裂谷**
 
-- 世界著名的东非大裂谷，是因为印度洋板块和非洲板块张裂形成的
+- 世界著名的**东非大裂谷**，是因为**印度洋板块和非洲板块张裂**形成的
 
 ## **3.3 世界上的山脉都在哪里？**
 
-- 新辙曲山脉山脉不断增高，山峰陡峭
+- **新褶曲山脉**
+  - **不断增高，山峰陡峭**
 
-- 旧褶曲山脉则因风华和侵蚀作用的破坏而显得低矮圆滑
+- **旧褶曲山脉**
+  - 因**风化和侵蚀作用**，显得**低矮圆滑**
+
 
 ## **3.4 山地提供什么资源？**
 
-- 矿产资源
+- 山地的自然资源
+  - 矿产资源
 
-- 木材
+  - 木材
 
-- 旅游资源
+  - 旅游资源
+
+- **瑞士的旅游业**
+  - ![瑞士](https://i.ibb.co/85DL504/image.png)
+
+  - **阿尔卑斯山脉**为瑞士发展旅游业提供有利资源
+
+  - 瑞士的**滑雪旅游**闻名的原因
+    - 壮丽的湖光山色
+
+    - 天然的冰雪美景
+
+    - 清新的空气
