--- a/Science Notes/J3 Science Notes/7 能量的转化与守恒.md
+++ b/Science Notes/J3 Science Notes/7 能量的转化与守恒.md
@@ -84,6 +84,7 @@
 | 不同点 | 机械能与热能的相互转化 | 热能在不同的物体之间发生了转移 |
 
 - **热传递和做功**两种改变物体热能的方法，对于改变物体热能是**等效**的。
+- 能量的**转化**和**转移**是**有方向性的**
 - 若一个物体不吸热，不放热，并不代表该物体温度不变
   - 改变物体温度有两个途径：做功和热传递
   - 不吸热不放热只说明了没有热传递
