--- a/Science Notes/J3 Science Notes/8 食物与营养.md
+++ b/Science Notes/J3 Science Notes/8 食物与营养.md
@@ -114,6 +114,11 @@
 
 - 营养不良
 
+  - |     类型      |      原因      |            症状            |
+    | :-----------: | :------------: | :------------------------: |
+    |    消瘦型     |  能量供应不足  | 体重明显减轻、皮下脂肪减少 |
+    |    浮肿型     | 蛋白质供应不足 |       全身或局部水肿       |
+    | 消瘦 - 浮肿型 |  介于二者之间  |        介于二者之间        |
   - 消瘦型：能量供应不足
   - 浮肿型：蛋白质供应不足
   - 消瘦—浮肿型：介于两者之间
