--- a/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
+++ b/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
@@ -110,7 +110,7 @@
   | ---- | :--------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
   | 功能 |        把血液送到全身各器官的血管        |               把血液从全身各器官送回心脏的血管               |              血液和组织细胞间进行物质交换的场所              |
   | 特征 | 管壁厚、弹性大、管内血流速度快、血压最大 | 管壁薄、弹性小、管腔大、管内血流速度慢、血压最小。管腔内有半月形的静脉瓣，防止血液倒流 | 管壁极薄，仅有一层上皮细胞构成，管径极细，一般只允许红细胞排成单行通过 |
-  |      |     颈部：颈动脉；腕部：桡 (ráo)动脉     | 皮肤下的“青筋”就是静脉。抽血、注射疫苗都在静脉，静脉靠近皮肤，血流速度较慢，安全性较高 |  连接在细小的动脉和静脉之间的血管、毛细血管血压 > 静脉血压   |
+  |      |     颈部：颈动脉；腕部：桡 (ráo)动脉     | 皮肤下的“青筋”就是静脉。抽血、注射疫苗都在静脉，静脉靠近皮肤，血流速度较慢，安全性较高 | 连接在细小的动脉和静脉之间的血管、毛细血管血压 > 静脉血压、毛细血管流速 < 静脉流速 |
   
 
 ### 10.2.2 血液运输的动力器官——心脏
@@ -192,7 +192,7 @@
 - 体循环
   - 左心室 ——> 主动脉 ——> 各级动脉 ——> 毛细血管 ——> 各级静脉 ——> 上下腔静脉 ——> 右心房
   - 血液通过毛细血管网和身体的各部分的组织细胞进行物质交换
-    - 把运来的氧气和废料供给细胞利用，同时把细胞产生的二氧化碳等废物运走
+    - 把运来的氧气和养料供给细胞利用，同时把细胞产生的二氧化碳等废物运走
   - 从左心室射出的鲜红色充氧血，经过体循环变成暗红色的缺氧血
     - 充氧血：含氧量较多的血液，呈鲜红色
     - 缺氧血：含氧量较少的血液，呈暗红色
