--- a/Science Notes/J3 Science Notes/6 热.md
+++ b/Science Notes/J3 Science Notes/6 热.md
@@ -65,8 +65,11 @@
 - **热能（内能）**：构成物体的**所有分子**，其**热运动的动能与分子势能的总和**
   - 单位：**焦耳(J)**
   - **热能**是**不同于机械能的另一种形式的能**
-  - **一切物体，不论温度高低，都具有内能**
-  - 物体温度降低时，内能减少；物体温度升高时，内能增加
+  - **一切物体，不论温度高低，都具有热能**
+  - 物体温度降低时，热能减少；**物体温度升高时，热能增加**
+  - **热能增加，温度不一定会上升**
+    - 晶体熔化时不断吸热，热能增加，但温度保持不变
+    - 0℃的冰化成0℃的水，虽然温度没变，分子动能没变，但由于融化是一个吸热过程，吸收的能量用于增加分子势能，故此，我们说，分子势能是增加的，热能是增加的，而温度不变
 - **静止**在**水平**地面上的小汽车
   - 动能为零，重力势能为零，机械能为零
   - **所有的分子都在不停的做无规则运动**，**内能不为零**
@@ -101,6 +104,7 @@
 - 温度：表示物体的冷热程度
 - 热能：构成物体的所有分子，其热运动的动能和分子势能的总和
 - 热量：热传递过程中传递热量的多少
+
 
 ## 6.4 对流
 
