--- a/Science Notes/J3 Science Notes/9 消化与吸收.md
+++ b/Science Notes/J3 Science Notes/9 消化与吸收.md
@@ -86,6 +86,7 @@
 - 如：**唾液淀粉酶**【将淀粉分解成麦芽糖】、胰淀粉酶、胰脂肪酶、胰蛋白酶
 - **酶**是**生物催化剂**，具有高效性，只需**微量就可参与反应**，使人体细胞内的各种**反应迅速进行**，保证各项生命活动的正常进行
 - 酶具有**专一性**，一种酶只能催化某一种或一类化学反应
+- 消化酶**参与反应**后本身的**质量不会改变**
 - **酶的催化作用**会受**到温度、酸碱度等外界因素影响**
   - 唾液淀粉酶在pH 6.6 - 7.1 的环境活性最强
   - 胃蛋白酶在pH 0.9 - 1.5 的胃液中活性最强
