--- a/Geography Notes/J2 Geography Notes/4 天崩地裂.md
+++ b/Geography Notes/J2 Geography Notes/4 天崩地裂.md
@@ -2,61 +2,73 @@
 
 ## **4.1 为什么会发生地震？**
 
-- 当岩石层收到**内力作用**而发生断裂或错位，这时就会发生地震
+- 地壳是由于地壳运动引起的，当岩石层受到**内力作用**而发生**断裂或错位**，这时就会发生**地震**
 
 ## **4.2 哪里常发生地震？**
 
 - 世界有两大地震带
+  - **环太平洋地震带**
 
-- **环太平洋地震带**
-
-- **地中海——喜马拉雅地震带**
+  - **地中海——喜马拉雅地震带**
 
 - **全球80%的地震集中于环太平洋地震带**
 
 - **地震带的分布和板块边界吻合**
 
+### 4.2.1 地震频繁的日本
+
+- 日本位于**亚欧板块**和**太平洋板块**的边界，位于**环太平洋地震带**，因此常发生地震
+- **关东大地震**
+  - 1923年，东京发生7.9级大地震
+  - 摧毁了整个**横滨**和半个**东京**
+  - 导致煤气管断裂，引起火灾，造成14万人死亡，财物损失惨重
+- **神户大地震**
+  - 1995年，日本神户发生了7.2级大地震
+  - 神户淡路区约5500人死亡，4万人受伤以及30万人紧急疏散
+  - 造成铁路被扭曲，桥梁倒塌，城市大部分的水、电供应都告中断
+
+### 4.2.2 印尼地震不绝
+
+- 印尼位于地震带中，每年发生大小地震数千次
+- 
+
 ## **4.3 地震带来什么危害？**
 
-\1. 震灾区的房屋、道路和桥梁的倒塌，造成人命和财物的损失
+1. 震灾区的房屋、道路和桥梁的倒塌，造成人命和财物的损失
 
-\2. 运输中断如铁路被扭曲
+2. 运输中断如铁路被扭曲
 
-\3. 电缆，煤气管断裂，引发火灾
+3. 电缆，煤气管断裂，引发火灾
 
-\4. 地震可能会发生山泥倾泻，地陷及火灾
+4. 地震可能会发生山泥倾泻，地陷及火灾
 
-\5. 如果地震发生在海底，可能引发海啸
+5. 如果地震发生在海底，可能引发海啸
 
-\6. 如果灾区缺乏食物、净水或庇护中心，死者的尸体未能及时处理，更可能会引发传染性的疫症
+6. 如果灾区缺乏食物、净水或庇护中心，死者的尸体未能及时处理，更可能会引发传染性的疫症
 
 ## **4.4 如何减轻地震损失**
 
-\1. 分析过去的记录，估计地震再次出现的时间
+1. 分析过去的记录，估计地震再次出现的时间
 
-\2. 改善地震警报系统，快速传播地震消息
+2. 改善地震警报系统，快速传播地震消息
 
-\3. 改良建筑物设计，以抵抗地震
+3. 改良建筑物设计，以抵抗地震
 
-\4. 进行地震演习，教育大众在地震时的求生知识
+4. 进行地震演习，教育大众在地震时的求生知识
 
-\5. 改善地震后的救援工作，为拯救队提供良好的训练
+5. 改善地震后的救援工作，为拯救队提供良好的训练
 
 ## **4.5 海啸是怎么发生的？**
 
-- 海啸形成的主要原因是**海地发生地震**
+- 海啸形成的主要原因是**海底发生地震**
 
 - 海底发生地震，引起剧烈震动，海床移位，形成巨浪，扑向海边
 
- 
-
-海啸发生前的征兆
+#### 海啸发生前的征兆
 
 - 海水急速退潮
 
 - 大量鱼虾等深海生物在浅滩出现
-
- 
 
 ## **4.6 海啸造成哪些破坏？**
 
@@ -68,8 +80,12 @@
 
 - 把船只等重物冲到岸上
 
- 
-
-如何减轻海啸带来的破坏
+#### 如何减轻海啸带来的破坏
 
 - 设立海啸警报系统
+
+#### 2004年南亚海啸
+
+![南亚海啸](https://i.ibb.co/D5TSBct/image.jpg)
+
+- 2004年，印尼苏门答腊北部外海发生9级强震，引发大海啸，侵袭印度洋附近国家
