--- a/Geography Notes/J2 Geography Notes/5 地动山摇.md
+++ b/Geography Notes/J2 Geography Notes/5 地动山摇.md
@@ -1,52 +1,50 @@
-# **第五章 地动山摇**
+# 第五章 地动山摇
 
-## **5.1 火山为什么会爆发**
+## 5.1 火山为什么会爆发
 
-- 地壳下面灼热的岩浆在强大的内力作用下，沿地壳裂缝涌上陆地或海床，发生火山爆发
+- 在强大的**内力作用**下，**岩浆沿地壳裂缝涌上陆地或海床**，发生**火山爆发**
 
-## **5.2 火山分布在哪里？**
+## 5.2 火山分布在哪里？
 
-- 大部分火山都在板块边界出现
+- 大部分火山都在**板块边界**出现
+- 全球有三个主要的火山带
+  1. **环太平洋火山带**
+     - **全球一半以上的火山**分布在这条火山带上
+  2. **大西洋火山带**
+     - 多数是由**海底火山**组成的
+  3. **地中海沿岸与东非火山带**
+     - 分布在**地中海地区**，并**向东延伸**到东非的火山带
 
-- 全球有三个主要的火山带：
 
-\1. 环太平洋火山带
+## 5.3 火山的分类
 
-- 全球一半以上的火山分布在这条火山带上
+- 火山按照**活跃程度**，分成三大类
+  - **活火山**
+    - 最近期间爆发过的火山
 
-\2. 大西洋火山带
+    - 马荣火山（菲律宾）
 
-- 多数是由海底火山组成的
+  - **睡火山**
+    - 长期没有爆发，但有机会爆发的火山
 
-\3. 地中海沿岸与东非火山带
+    - 富士山（日本）
 
-- 分布在地中海地区，并向东延伸到东非的火山带
+  - **死火山**
+    - 被发现以来，从来没有爆发过的火山
 
-## **5.3 火山怎么分类？**
+    - 乞力马扎罗火山（东非坦桑尼亚）
 
-- 火山按照活跃程度，分成三大类
+- 按照火山的**爆发形式**，可分为锥状火山和盾状火山
+  - **锥状火山**
+    - 酸性熔岩多
+    - 猛烈爆发
 
-- 活火山：最近期间爆发过的火山
+  - **盾状火山**
+    - 基性熔岩多
+    - 稳静爆发
 
-- 睡火山：长期没有爆发，但有机会爆发的火山
 
-- 死火山：被发现以来，从来没有爆发过的火山
-
-- 按照火山的爆发形式，可分为锥状火山和盾状火山
-
-- 锥状火山
-
-- 酸性熔岩多
-
-- 猛烈爆发
-
-- 盾状火山
-
-- 基性熔岩多
-
-- 稳静爆发
-
-## **5.4 火山灾害的影响**
+## 5.4 火山灾害的影响
 
 - 火山爆发时，熔岩会烧毁它所流经的房屋和森林
 
@@ -56,22 +54,34 @@
 
 - 引致山泥倾泻、雪崩、地震
 
-## **5.5 火山的“礼物”**
+## 5.5 火山的“礼物”
 
-- 肥沃的土壤
+- **肥沃的土壤**
+  - 火山区的土壤较肥沃，因为火山灰含有丰富的矿物
 
-- 火山区的土壤较肥沃，因为火山灰含有丰富的矿物
+- **地热能**
+  - 火山区的热水和蒸汽可产生地热能
 
-- 地热能
+- **旅游景点**
+  - 火山区的景色宜人，是主要的旅游景点
 
-- 火山区的热水和蒸汽可产生地热能
+  - 如：日本的富士山、美国的黄石花园、纽西兰的罗托维亚
 
-- 旅游景点
+  - 苏门答腊的多峇湖、纽西兰的塔波湖是著名的火口湖
 
-- 火山区的景色宜人，是主要的旅游景点
+  - 火山区的温泉含有丰富矿物，有养身健体的疗效
 
-- 如：日本的富山市、美国的黄石花园、纽西兰的罗托维亚
 
-- 苏门答腊的多峇湖、纽西兰的塔波湖是著名的火口湖
+#### 爪洼岛的梯田
 
-- 火山区的温泉含有丰富矿物，有养身健体的疗效
+- 印尼的爪洼岛上有许多肥沃的**基性火山土**，被开辟成**梯田**，种植**稻米**
+
+#### 火口湖
+
+- 火山口：火山顶部的圆形洼地
+- 火口湖：火山口集水成湖
+
+#### 温泉
+
+- 温泉：火山去从地底流出地面的热水
+- 喷泉：热水间歇性地喷出
