--- a/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
+++ b/Science Notes/J3 Science Notes/10 物质的运输和排泄.md
@@ -9,9 +9,10 @@
   - 上层：**血浆** - **透明、淡黄色**的液体
     - 占血液总量的55%，其90%以上是水，其余是血浆蛋白、蛋白质、葡萄糖、无机盐、废料[^废料]等
     - 血浆的主要功能是**运载血细胞、运输营养物质和二氧化碳等代谢产物**
-
+    - 血清：血浆 - 蛋白质
+    
   - 下层：**血细胞** - 呈暗红色
-
+  
 - **血液**就是由**血浆和各种血细胞组成**
 
 #### 血细胞
@@ -283,7 +284,8 @@
 - 淋巴经各级淋巴管和淋巴结后，汇入***锁骨下静脉***（上腔静脉），**进入血液循环**
 - 淋巴循环时**单向流动**而不形成真正的循环
 - 淋巴循环中，**淋巴结**是**淋巴回流的重要滤器**
-  - 淋巴结内的淋巴细胞能**吞噬细菌及其他引起疾病的微生物**
+  - 淋巴结内的**淋巴细胞**（淋巴球）能**吞噬细菌及其他引起疾病的微生物**
+  - 淋巴系统通过淋巴循环协助体液回流
   - 对机体起着防御和保护作用
 
 ## 10.5 人体的排泄
