wah废了一天还可以这么累 无语;-;

--- a/Geography Notes/J2 Geography Notes/2 陆地与海洋.md
+++ b/Geography Notes/J2 Geography Notes/2 陆地与海洋.md
@@ -10,6 +10,8 @@
 
 - **北极**是**海洋**、**南极**是**陆地**
 
+- 在**地形图**中，**绿色**主要代表**平原**
+
 ## **2.2 地球上的陆地是什么样子的呢？**
 
 ### **2.2.1 陆地**
@@ -33,6 +35,8 @@
 - 按面积大小依次排序
   - 七大洲：亚洲、非洲、北美洲、南美洲、南极洲、欧洲、大洋洲
   - 四大洋：太平洋、大西洋、印度洋、北冰洋
+- 北美洲境内的密西西比河最后注入大西洋
+- 亚洲（亚细亚洲）跨越纬度最多
 - 南极洲
   - 横跨经度最多
   - 终年覆盖着冰雪
@@ -103,3 +107,4 @@
 - ![海底地形剖面图](https://i.ibb.co/Rh1689t/image.jpg)
   - 甲：大陆棚
   - 丁：海沟
+- 最佳的**石油和天然气资源探勘**地是**大陆棚**
