--- a/Geography Notes/J2 Geography Notes/3 移动的大陆.md
+++ b/Geography Notes/J2 Geography Notes/3 移动的大陆.md
@@ -45,8 +45,7 @@
 
 - 褶曲作用形成的山脉：**喜马拉雅山脉、阿尔卑斯山脉、洛矶山脉、安地斯山脉**
 
-- ![褶曲山脉](https://i.ibb.co/jMjN5W0/image.jpg)
-  - *四个新褶曲山脉 + 东非大裂谷*
+- ![新褶曲山脉](https://i.ibb.co/2hNkpQR/image.png)
 
 
 #### 喜马拉雅山脉的形成
@@ -97,8 +96,8 @@
   - **阿尔卑斯山脉**为瑞士发展旅游业提供有利资源
 
   - 瑞士的**滑雪旅游**闻名的原因
-    - 壮丽的湖光山色
+    - 壮丽的**湖光山色**
 
-    - 天然的冰雪美景
+    - 天然的**冰雪美景**
 
-    - 清新的空气
+    - **清新的空气**
