--- a/Geography Notes/J2 Geography Notes/4 天崩地裂.md
+++ b/Geography Notes/J2 Geography Notes/4 天崩地裂.md
@@ -15,6 +15,8 @@
 
 - **地震带的分布和板块边界吻合**
 
+- 经常发生地震的国家主要包括：日本、印尼、智利
+
 ### 4.2.1 地震频繁的日本
 
 - 日本位于**亚欧板块**和**太平洋板块**的边界，位于**环太平洋地震带**，因此常发生地震
@@ -89,3 +91,6 @@
 ![南亚海啸](https://i.ibb.co/D5TSBct/image.jpg)
 
 - 2004年，印尼苏门答腊北部外海发生9级强震，引发大海啸，侵袭印度洋附近国家
+- 造成重大伤亡的因素
+  - 缺乏海啸警报系统
+  - 海啸避灾知识不足
