--- a/Geography Notes/J2 Geography Notes/5 地动山摇.md
+++ b/Geography Notes/J2 Geography Notes/5 地动山摇.md
@@ -3,6 +3,7 @@
 ## 5.1 火山为什么会爆发
 
 - 在强大的**内力作用**下，**岩浆沿地壳裂缝涌上陆地或海床**，发生**火山爆发**
+- 火山和地震都是地球内部能量剧烈的释放
 
 ## 5.2 火山分布在哪里？
 
@@ -19,29 +20,32 @@
 ## 5.3 火山的分类
 
 - 火山按照**活跃程度**，分成三大类
+  
+  ![火山活跃程度分类的例子](https://i.ibb.co/PD32Htf/image.png)
+
   - **活火山**
     - 最近期间爆发过的火山
-
-    - 马荣火山（菲律宾）
+  
+    - 马荣火山（菲律宾）【锥状火山】
 
   - **睡火山**
     - 长期没有爆发，但有机会爆发的火山
-
-    - 富士山（日本）
+  
+    - 富士山（日本）【锥状火山】
 
   - **死火山**
     - 被发现以来，从来没有爆发过的火山
-
-    - 乞力马扎罗火山（东非坦桑尼亚）
-
+  
+    - 乞力马扎罗火山（东非坦桑尼亚）【锥状火山】
+  
 - 按照火山的**爆发形式**，可分为锥状火山和盾状火山
-  - **锥状火山**
-    - 酸性熔岩多
-    - 猛烈爆发
-
-  - **盾状火山**
-    - 基性熔岩多
-    - 稳静爆发
+  
+  |          |      猛烈式      |         稳静式         |
+  | :------: | :--------------: | :--------------------: |
+  | 熔岩性质 |    酸性熔岩多    |       基性熔岩多       |
+  | 火山形状 |     锥状火山     |        盾状火山        |
+  |  爆发力  |        强        |           弱           |
+  | 代表火山 | 印尼克拉卡托火山 | 夏威夷的火山（太平洋） |
 
 
 ## 5.4 火山灾害的影响
@@ -57,19 +61,19 @@
 ## 5.5 火山的“礼物”
 
 - **肥沃的土壤**
-  - 火山区的土壤较肥沃，因为火山灰含有丰富的矿物
+  - 火山区的**土壤较肥沃**，因为**火山灰**含有丰富的**矿物**
 
 - **地热能**
-  - 火山区的热水和蒸汽可产生地热能
+  - 火山区的热水和蒸汽可产生**地热能**
 
 - **旅游景点**
   - 火山区的景色宜人，是主要的旅游景点
 
-  - 如：日本的富士山、美国的黄石花园、纽西兰的罗托维亚
+  - 如：日本的**富士山**、美国的**黄石花园**、纽西兰的**罗托维亚**
 
-  - 苏门答腊的多峇湖、纽西兰的塔波湖是著名的火口湖
+  - **苏门答腊的多峇湖**、**纽西兰的塔波湖**是著名的**火口湖**
 
-  - 火山区的温泉含有丰富矿物，有养身健体的疗效
+  - 火山区的**温泉**含有丰富**矿物**，有**养身健体**的疗效
 
 
 #### 爪洼岛的梯田
@@ -78,10 +82,10 @@
 
 #### 火口湖
 
-- 火山口：火山顶部的圆形洼地
-- 火口湖：火山口集水成湖
+- **火山口**：火山**顶部的圆形洼地**
+- **火口湖**：火山口**集水成湖**
 
 #### 温泉
 
-- 温泉：火山去从地底流出地面的热水
-- 喷泉：热水间歇性地喷出
+- **温泉**：火山去从地底流出地面的热水
+- **喷泉**：热水间歇性地喷出
