--- a/Geography Notes/J3 Geography Notes/5 世界大家庭.md
+++ b/Geography Notes/J3 Geography Notes/5 世界大家庭.md
@@ -2,3 +2,12 @@
 
 ## 5.1 国家与国界
 
+- 目前，全世界共有**190个国家**
+- **面积最大**的是**俄罗斯**
+  - 地跨欧、亚两州
+  - **首都莫斯科**位于**欧洲**部分
+- **面积最小**的国家是**梵蒂冈**
+  - 位于**意大利首都罗马**
+  - **政教合一**的国家
+  - 全球**天主教徒的信仰中心**
+- 
