够力 要读不完liao

--- a/Geography Notes/J1 Geography Notes/6. 增长中的人口.md
+++ b/Geography Notes/J1 Geography Notes/6. 增长中的人口.md
@@ -2,24 +2,30 @@
 
 ## 6.1 人口的分布
 
-- 马来西亚主要人口稠密区
+- ![马来西亚的人口分布](https://i.ibb.co/0C0fZmN/image.png)
 
-  1. 马来西亚半岛西海岸的平原或丘陵区
-  2. 马来西亚半岛东海岸的吉兰丹、登嘉楼沿岸和关丹附近
-  3. 砂拉越的古晋和沙巴亚庇一带
+- 自然环境和人文活动的差异，造成人口不均
 
-- 马来西亚人口稀少区
+- 平原及产业活动发达的地区人口多，内陆山地及沿海沼泽人口少
 
-  1. 马来西亚半岛内陆山地
-  2. 沙巴、砂拉越内陆山地
+- 马来西亚主要**人口稠密区**
 
-- | 人口稠密的原因                                     | 人口稀少的原因                                         |
+  1. 马来西亚**半岛西海岸的平原或丘陵区**
+  2. 马来西亚半岛东海岸的**吉兰丹、登嘉楼沿岸**和**关丹附近**
+  3. **砂拉越的古晋**和**沙巴亚庇**一带
+
+- 马来西亚**人口稀少区**
+
+  1. 马来西亚**半岛内陆山地**
+  2. **沙巴、砂拉越内陆山地**
+
+- | \*人口稠密的原因                                   | \*人口稀少的原因                                       |
   | -------------------------------------------------- | ------------------------------------------------------ |
   | 水源充足、地势平坦、土壤肥沃、交通便利、工商业发达 | 热带雨林和山地广布、开发不易、交通不发达、经济发展落后 |
 
 #### 人口密度
 
-- 人口密度：一个国家某地区每平方公里内平均居住的人口数量
+- 人口密度：一个国家某**地区每平方公里内平均居住的人口数量**，反映该地区的人口密集程度
 
 - $$
   \frac{人口总数（人）}{土地面积（平方公里）}
@@ -28,5 +34,58 @@
 ## 6.2 人口的增长
 
 - 一个国家最重要的是能促进国家繁荣进步的国民
-- 影响人口增长的原因
-  - 
+- **不利于**人口增长的因素：**疾病传染、战争动乱、自然灾害**等
+- 马来西亚**人口增长的原因**
+  - **经济的发展**
+  - **卫生、医疗条件改善**
+  - **食物充足，营养较佳**
+  - **疟疾等传染病被控制**
+  - **国民寿命延长**
+- 马来西亚**人口增长趋势**：***人口死亡率逐渐下降，人口增长迅速***
+  - 目前人口数目的变化情况：***出生率降低，死亡率降低***
+- **人口的增长**主要是由***自然增长率***决定的的，其次是***人口的迁移***
+
+### 自然增长率
+
+- 出生率：某地一年内每一千人中出生的人数
+
+  - $$
+    出生率 = \frac{出生人口}{总人口} \times 1000 \%
+    $$
+
+- 死亡率：某地一年内每一千人中死亡的人数
+
+  - $$
+    死亡率 = \frac{死亡人口}{总人口} \times 1000 \%
+    $$
+
+- **自然增长率：出生率 - 死亡率**
+
+- 自然增长率**大于零**，表示**人口增加**
+
+## 6.3 人们为什么要迁移？
+
+- 人口**迁移的类型**
+  - 乡村 ——> 城市
+  - 城市 ——> 乡村
+  - 城市 ——> 城市
+  - 乡村 ——> 乡村
+- **城市吸引大量乡村人民迁移的优势**
+  - 较多的就业机会
+  - 较好的生活条件
+  - 较好的教育、医疗、文化条件
+- 马来西亚**人口迁移**的主要**因素**
+  - **经济因素**
+    - 人口迁移的**基本动因**
+    - 为追求**较多的就业机会**和**更高的经济收入**，从而**享受更好的生活**
+    - **经济发展水平较高的城市**（如吉隆坡、槟城），吸引**人口迁入**
+  - **国策因素**
+    - 1980年代前后，为**扫除贫穷**，协助**乡村人民增加收入**，以**提高生活素质**并**减少经济发展不平衡**的现象，**政府在不发达的州属开辟新的移民点**，形成**乡村与乡村之间的人口迁移**现象
+
+### 增卡三角
+
+- **联邦土地发展局**（Felda）在**彭亨中部**开辟新**耕地**
+- ![彭亨州增卡三角外来移民示意图](https://i.ibb.co/kDCBsjL/image.png)
+- 有完善的**土地规划**及**基本设施**
+- 居民多从事**种植油棕或橡胶**工作
+- 目的：**提高农民生活素质**
