--- a/Geography Notes/J2 Geography Notes/1 认识地球.md
+++ b/Geography Notes/J2 Geography Notes/1 认识地球.md
@@ -39,23 +39,47 @@
 - 经线标定了不同的度数，叫做**经度**
 - ***零度*经线**又称为***本初子午线***
   - **本初子午线的地面标志**：在**英国伦敦格林威治**天文台的原址
-
 - 0度到东经180度经线是**东经线**，0度到西经180度经线是**西经线**
 - **东西半球**的划分：以**20°W和160°E**两条经线作为**东，西半球的分界线**
   - 从20°W**向东**到160°E为**东半球**，从20°W**向西**到160°E为**西半球**
   - 有美洲就是西半球
-- ***国际日期变更线***：以***180°经线***作为地球上“今天”和“昨天”的分界线
-  - 180°经线既为东经180°，又为西经180°经线
-  - 穿过的大部分地区为太平洋上的开阔水域
-  - 太阳东升西落，太阳公转西向东，东半球会先看到太阳
-    - 马来西亚在东半球，美国在西半球
-    - 马来西亚现在6月17号，美国现在6月16号
-    - 美国人来到马来西亚日期要加一天
-  - 由**西半球到东半球**越过这条线，日期要**加一天**，**东半球到西半球**，日期要**减一天**
-
+  - 0°经线和180°经线组成的经线圈对比20°W和160°E经线所组成的经线圈穿过的陆地面积较大
 - **经线圈**
   - 一条**东经**，一条**西经**，两条经线**总和180°**
   - 120°E & 60°W、0° & 180°、20°W & 160°E
+- 地球仪上有**无数条经线**和**无数条纬线**
+  - 地球仪上经线有360条是*错误*的
+
+
+#### ***国际日期变更线***：以***180°经线***作为地球上“今天”和“昨天”的分界线
+
+- 180°经线既为东经180°，又为西经180°经线
+- 穿过的大部分地区为太平洋上的开阔水域
+- 太阳东升西落，太阳公转西向东，东半球会先看到太阳
+  - 马来西亚在东半球，美国在西半球
+  - 马来西亚现在6月17号，美国现在6月16号
+  - 美国人来到马来西亚日期要加一天
+- 由**西半球到东半球**越过这条线，日期要**加一天**，**东半球到西半球**，日期要**减一天**
+- ![国际日期变更线](https://i.ibb.co/ZMgJjtZ/image.png)
+  - *根据此图，西到东日期要减一天*
+
+### 总结：地球主要的经纬线与经纬度
+
+- 经线指示南北方向、纬线指示东西方向
+- 马来西亚位于北半球、东半球
+
+|   经纬线名称   |    经纬度    |
+| :------------: | :----------: |
+|      赤道      |  0°（纬线）  |
+|    北回归线    |    23.5°N    |
+|    南回归线    |    25.5°S    |
+|     北极圈     |    66.5°N    |
+|     南极圈     |    66.5°S    |
+|      北极      |     90°N     |
+|      南极      |     90°S     |
+|   本初子午线   |  0°（经线）  |
+| 国际日期变更线 | 180°（经线） |
+| 东西半球的划分 | 160°E、20°W  |
 
 ## **1.4 地球的运动**
 
@@ -74,5 +98,11 @@
 | 太阳直射位置    |   赤道   | 北回归线23.5°N |   赤道   | 南回归线23.5°S |
 | 产生现象        | 昼夜平分 |    昼长夜短    | 昼夜平分 |    昼短夜长    |
 
-- 由于**地球是倾斜**的，所以在**地球公转**的过程中，南北半球各地接受**太阳照射的角度不断变化**，于是就产生的**春夏秋冬**
+- 由于**地轴是倾斜**的，所以在**地球公转**的过程中，南北半球各地接受**太阳照射的角度不断变化**，于是就产生的**春夏秋冬**
+
+### 极昼与极夜
+
+- 又称永昼与永夜
+- 极昼、极夜只会出现在**南北极地区**
+- 北半球夏季时，北极极昼，南极极夜
 
