--- a/Geography Notes/J2 Geography Notes/2 陆地与海洋.md
+++ b/Geography Notes/J2 Geography Notes/2 陆地与海洋.md
@@ -17,34 +17,35 @@
 ### **2.2.1 陆地**
 
 - 陆地分为**大陆，岛屿和半岛**
-
 - **大陆**
   - **面积广大的陆地**叫做
   - 最大：**亚欧大陆**
-
 - **岛屿**
   - **面积小，四面环水的陆地**
   - 最大：**格陵兰岛**
-
 - **半岛**
   - **陆地伸进海洋**，**三面环水**的部分
   - 最大：**阿拉伯半岛**
-
 - **最大的群岛**：**马来群岛**
 - ![世界的海陆分布](https://i.ibb.co/2vDqpcW/image.png)
 - 按面积大小依次排序
-  - 七大洲：亚洲、非洲、北美洲、南美洲、南极洲、欧洲、大洋洲
-  - 四大洋：太平洋、大西洋、印度洋、北冰洋
+  - 七大洲：<u>亚洲</u>（30%）、非洲（20%）、北美洲、南美洲、南极洲、欧洲、<u>大洋洲</u>
+  - 四大洋：<u>太平洋</u>（50%）、大西洋（26%）、印度洋（20%）、<u>北冰洋</u>（3%）
 - 北美洲境内的密西西比河最后注入大西洋
 - 亚洲（亚细亚洲）跨越纬度最多
+- 北冰洋
+  - 被北美洲、亚洲、欧洲包围
+  - 没被赤道穿过
+  - 跨经度最多的大洋
+
 - 南极洲
-  - 横跨经度最多
+  - 横跨经度最多的大洲
   - 终年覆盖着冰雪
   - ![南极洲轮廓](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Location_Antarctica.svg/1024px-Location_Antarctica.svg.png)
 
 
 
-### **2.2.2 陆地的五种基本地形**
+### **2.2.2 \*陆地的五种基本地形**
 
 - ***山地***
   - **海拔为500米以上**
