--- a/Geography Notes/J2 Geography Notes/3 移动的大陆.md
+++ b/Geography Notes/J2 Geography Notes/3 移动的大陆.md
@@ -43,10 +43,15 @@
 
 - 当两个**板块相互碰撞**，强大的**挤压力**造成**褶曲作用**，是板块上的**岩层产生褶皱**，形成**褶曲山脉**
 
-- 褶曲作用形成的山脉：**喜马拉雅山脉、阿尔卑斯山脉、洛矶山脉、安地斯山脉**
+- 褶曲作用形成的新褶曲山脉：**喜马拉雅山脉、阿尔卑斯山脉、洛矶山脉、安地斯山脉**
 
 - ![新褶曲山脉](https://i.ibb.co/2hNkpQR/image.png)
 
+- **新褶曲山脉**
+  - **不断增高，山峰陡峭**
+
+- **旧褶曲山脉**
+  - 因**风化和侵蚀作用**，显得**低矮圆滑**
 
 #### 喜马拉雅山脉的形成
 
@@ -71,14 +76,6 @@
 - 两**个板块彼此拉张**，**板块张裂**形成**狭长深陷的谷底**，称为**裂谷**
 
 - 世界著名的**东非大裂谷**，是因为**印度洋板块和非洲板块张裂**形成的
-
-## **3.3 世界上的山脉都在哪里？**
-
-- **新褶曲山脉**
-  - **不断增高，山峰陡峭**
-
-- **旧褶曲山脉**
-  - 因**风化和侵蚀作用**，显得**低矮圆滑**
 
 
 ## **3.4 山地提供什么资源？**
