--- a/Geography Notes/J2 Geography Notes/4 天崩地裂.md
+++ b/Geography Notes/J2 Geography Notes/4 天崩地裂.md
@@ -3,6 +3,7 @@
 ## **4.1 为什么会发生地震？**
 
 - 地壳是由于地壳运动引起的，当岩石层受到**内力作用**而发生**断裂或错位**，这时就会发生**地震**
+- 3.5级一下的地震只有地震仪才能侦察到，人类对此无感知
 
 ## **4.2 哪里常发生地震？**
 
@@ -32,9 +33,8 @@
 ### 4.2.2 印尼地震不绝
 
 - 印尼位于地震带中，每年发生大小地震数千次
-- 
 
-## **4.3 地震带来什么危害？**
+## **4.3 \*地震带来什么危害？**
 
 1. 震灾区的房屋、道路和桥梁的倒塌，造成人命和财物的损失
 
@@ -48,7 +48,7 @@
 
 6. 如果灾区缺乏食物、净水或庇护中心，死者的尸体未能及时处理，更可能会引发传染性的疫症
 
-## **4.4 如何减轻地震损失**
+## **4.4 \*如何减轻地震损失**
 
 1. 分析过去的记录，估计地震再次出现的时间
 
@@ -64,13 +64,15 @@
 
 - 海啸形成的主要原因是**海底发生地震**
 
-- 海底发生地震，引起剧烈震动，海床移位，形成巨浪，扑向海边
+- **海底**发生**地震**，引起**剧烈震动**，**海床移位**，形成巨浪，扑向海边
+
+- **海底火山爆发**，**海沟斜坡崩塌**，海面**强大风暴**，也会引起海啸
 
 #### 海啸发生前的征兆
 
 - 海水急速退潮
 
-- 大量鱼虾等深海生物在浅滩出现
+- 大量鱼虾等深海生物在浅滩出现，动物行为异常
 
 ## **4.6 海啸造成哪些破坏？**
 
@@ -90,7 +92,8 @@
 
 ![南亚海啸](https://i.ibb.co/D5TSBct/image.jpg)
 
-- 2004年，印尼苏门答腊北部外海发生9级强震，引发大海啸，侵袭印度洋附近国家
+- 2004年，**印尼苏门答腊北部外海**发生**9级强震**，引发大海啸，侵袭**印度洋附近国家**
 - 造成重大伤亡的因素
+  - 海底发生大地震
   - 缺乏海啸警报系统
   - 海啸避灾知识不足
