--- a/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
+++ b/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
@@ -60,7 +60,7 @@
 
 2. **粗放式农业**
 
-   - 农名采用**机械化耕作**，用**铁路**进行**运输**
+   - 农民采用**机械化耕作**，用**铁路**进行**运输**
    - 主要分布在**面积广大、土壤肥沃、雨量适中**的**温带草原**，如**加拿大、澳洲和阿根廷的温带草原区**
    - 农作物以**小麦**为主
 
@@ -73,7 +73,7 @@
 
 #### 个案：加拿大的小麦种植
 
-- ![加拿大的小麦种植]()
+- ![加拿大小麦区](https://i.ibb.co/pQGVySs/image.png)
 - 主要**种植区**：**温尼伯、卡加立和埃特蒙敦**（三角地带）
 - **小麦中心：勒吉那**
 - 农业类型：**粗放式农业**
@@ -91,13 +91,15 @@
 
 #### 畜牧方式
 
+![畜牧业分布](https://i.ibb.co/DYDzvbt/image.png)
+
 1. **放牧**
-   - 生产**肉类、牛皮**多**销售到市场**
+   - 生产**肉类、毛皮**多**销售到市场**
    - 分布在`北美洲、南美洲、澳洲、非洲南部`的**温带草原区**
    - 以**大规模牧场饲养牛和羊**
 2. **游牧**
    - **受水源限制**，牧民带着**牛、羊、骆驼**等牲畜**随水源与草地进行季节性迁移**
-   - 分布在`西南亚、中亚、非洲北部和东部`等**少雨区**，以及亚欧大陆与北美洲北部的**寒冷区**
+   - 分布在`西南亚、中亚、非洲北部和东部`等**少雨区**，以及`亚欧大陆与北美洲北部`的**寒冷区**
 3. **乳农业**
    - **种植牧草或饲料作物**，饲养乳牛
    - 由于**乳制品不耐久藏**，所以乳农业地区大多**靠近消费市场**
@@ -107,21 +109,19 @@
 
 #### 农业带来的环境问题和解决方法
 
-1. 使用大量**农药**，**污染空气和水源**，**危害人体健康**
-   - 发展**有机农业**减少对环境的破坏
-2. **化肥**改变土壤成分，造成**土壤养分失去平衡**
-   - 采用**轮种法**或**休耕法**以**恢复土壤肥力**
-3. 在**山坡上发展农业**，加速**水土流失**，造成**土壤贫瘠**
-   - 在**较陡的山坡开辟梯田**，**减少水土流失**
-4. **野生动物生存空间降低**，导致**物种减少**，**生态系统失去平衡**
-   - 设立**国家森林保护区**，**严格惩戒犯法之徒**
+| 环境问题                                                     | 解决方法                                     |
+| ------------------------------------------------------------ | -------------------------------------------- |
+| 用大量***农药***，**污染空气和水源**，**危害人体健康**       | 发展**有机农业**减少对环境的破坏             |
+| ***化肥***改变土壤成分，造成**土壤养分失衡**                 | 采用**轮种法**或**休耕法**以**恢复土壤肥力** |
+| 在**山坡上发展农业**，加速**水土流失**，造成**土壤贫瘠**     | 在**较陡的山坡开辟梯田**，**减少水土流失**   |
+| **野生动物生存空间降低**，导致**物种减少**，**生态系统失衡** | 设立**国家森林保护区**，**严格惩戒犯法之徒** |
 
 #### 畜牧业带来的环境问题和解决方法
 
-1. **草原过度畜牧，造成土地侵蚀**
-   - **控制牲畜养殖量**
-2. **禽畜的粪便和污水，造成严重的环境污染**
-   - **妥善处理禽畜粪便**
+| 环境问题                                       | 解决方法             |
+| ---------------------------------------------- | -------------------- |
+| **草原过度畜牧**，造成***土地侵蚀***           | **控制牲畜养殖量**   |
+| **禽畜的*粪便和污水***，造成严重的**环境污染** | **妥善处理禽畜粪便** |
 
 ## 3.3 水资源的利用和保护
 
@@ -129,15 +129,17 @@
 - 淡水资源
   - **水川**的储水量**最多**
   - 人类主要**使用河流、湖泊和地下水**
-- **海洋水**含有盐分，不能直接饮用，但它提供了**渔场**
+- **海洋水**含有盐分，不能直接饮用，但它提供了**渔产**
 
 ### 世界主要捕渔区
+
+![世界主要渔场](https://i.ibb.co/5GvsB9J/image.png)
 
 - **北美东岸渔场**
 - **北美西岸渔场**
 - **南美西岸渔场**
 - **东亚渔场**
-- **西北欧渔场**
+- **<u>西北</u>欧渔场**
 
 ### 如何保护水资源
 
@@ -148,6 +150,8 @@
 - **防止水土流失**
 
 ### 个案：日本的渔业
+
+![日本主要渔场](https://i.ibb.co/1GM0qwF/image.png)
 
 - 日本位于**东亚渔场**
 - 发达的原因
@@ -166,7 +170,9 @@
   - **逆渗透**
   - **紫外线消毒**
 
-## 3.4 森林资源的利用
+## 3.4 森林资源的利用和保护
+
+![世界寒带森林和热带森林的分布](https://i.ibb.co/rGcs95f/image.png)
 
 - **世界森林覆盖率为29%**
 - **热带雨林**主要分布在**南美洲的亚马孙河流域**、**非洲的刚果盆地**以及**东南亚地区**
