--- a/Geography Notes/J2 Geography Notes/5 地动山摇.md
+++ b/Geography Notes/J2 Geography Notes/5 地动山摇.md
@@ -50,7 +50,7 @@
 
 ## 5.4 火山灾害的影响
 
-- 火山爆发时，熔岩会烧毁它所流经的房屋和森林
+- 火山爆发时，熔岩会烧毁它所流经的**房屋和森林**
 
 - 大量的火山灰足以掩埋房屋和农田
 
@@ -61,11 +61,12 @@
 ## 5.5 火山的“礼物”
 
 - **肥沃的土壤**
-  - 火山区的**土壤较肥沃**，因为**火山灰**含有丰富的**矿物**
+  - 火山区的**土壤较肥沃**，因为**火山灰**富含**矿物**
 
 - **地热能**
   - 火山区的热水和蒸汽可产生**地热能**
-
+  - 例：冰岛
+  
 - **旅游景点**
   - 火山区的景色宜人，是主要的旅游景点
 
@@ -74,7 +75,6 @@
   - **苏门答腊的多峇湖**、**纽西兰的塔波湖**是著名的**火口湖**
 
   - 火山区的**温泉**含有丰富**矿物**，有**养身健体**的疗效
-
 
 #### 爪洼岛的梯田
 
