--- a/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
+++ b/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
@@ -2,7 +2,7 @@
 
 ## 3.1 什么是自然资源？
 
-- **自然资源**：**自然界**中能够**为人类所利用**的阳光、水、空气、土地、森林、草地、矿物等
+- **自然资源**：**自然界**中能够**为人类所利用**的**阳光**、水、空气、**土地**、森林、**草地**、矿物等
 - 可分为可复新资源和不可复新资源：
   - **可复新资源**
     - **被人类开发利用后，可以再生和循环使用的资源**
@@ -16,7 +16,7 @@
 - **土地资源**主要**分布**在
   - **林地：热带雨林 & 寒带针叶林**
   - **耕地：平原**
-  - **草地：热带温带草原及高原地区**
+  - **草地：热带温带草原 & 高原地区**
   - **建筑用地：城镇地区**
 - **土地资源面对的问题**
   - 可利用**土地有限且分布不均**
@@ -175,8 +175,13 @@
 ![世界寒带森林和热带森林的分布](https://i.ibb.co/rGcs95f/image.png)
 
 - **世界森林覆盖率为29%**
-- **热带雨林**主要分布在**南美洲的亚马孙河流域**、**非洲的刚果盆地**以及**东南亚地区**
-- **寒带森林**以及**针叶林为主**，主要分布在**俄罗斯**和**加拿大**
+
+| 类型 |                           热带雨林                           |               寒带森林               |
+| ---- | :----------------------------------------------------------: | :----------------------------------: |
+| 树木 |                           树种繁多                           |            **针叶林**为主            |
+| 地点 | **南美洲的<u>亚马孙河流域</u>**、**非洲的<u>刚果盆地</u>**以及**<u>东南亚</u>地区** | **<u>俄罗斯</u>**和**<u>加拿大</u>** |
+| 林产 |                         提供**硬木**                         |             提供**软木**             |
+| 用途 |                  作为**建筑材料**和**家具**                  |            **造纸**的原料            |
 
 ### 森林的重要性
 
@@ -197,6 +202,8 @@
 
 ### 个案：“森林之国”芬兰
 
+![北欧的森林](https://i.ibb.co/ZJDyKXS/image.png)
+
 - **芬兰——“森林之国”**
 - 森林**覆盖面积达60%**
 - 荷兰保护森林的政策
@@ -205,6 +212,8 @@
   - 组织了**生态与环境保护培训班**，让民众了解森林资源的保护和管理、森林生态系统和生物多样性等环境知识，以**保障森林可持续发展**
 
 ## 3.5 矿产资源的利用和保护
+
+![世界主要矿产的分布](https://i.ibb.co/ZzBNySD/image.png)
 
 ###  矿产资源的分配
 
@@ -217,44 +226,50 @@
 
 ### 世界主要工业区
 
-1. **西欧工业区**
+![世界主要工业区](https://i.ibb.co/vxFB5qR/image.png)
+
+1. **<u>西欧</u>工业区**
 2. **俄罗斯工业区**
 3. **日本工业区**
 4. **北美东北工业区**
 
+- 全球矿产开采较盛的地区多在北半球，因为**北半球工业国家较多**
+
 ### 个案：德国鲁尔工业区
+
+![德国鲁尔工业区](https://i.ibb.co/LR20BCy/image.png)
 
 #### 自然条件
 
-1. **煤矿丰富**
-2. **铁矿取得容易**
-3. **丰富的水电**
+1. 煤矿丰富
+2. 铁矿取得容易
+3. 丰富的水电
 
 #### 人文条件
 
-1. **完整的运输系统**
-2. **素质优良的劳工**
-3. **广大的市场**
+1. 完整的运输系统
+2. 素质优良的劳工
+3. 广大的市场
 
-### 开采矿物的问题
+### 开采矿物面对的问题
 
-1. **滥采乱掘**
-2. **破环地表**
-3. **环境污染**
+1. 滥采乱掘
+2. 破环地表
+3. 环境污染
 
 ### 采矿活动造成的环境问题及危害
 
-1. **矿坑排水毁坏农田**
-2. **煤矿自燃污染大气环境**
-3. **矿井倒塌造成房屋龟裂**
-4. **采矿活动破坏植被**
-5. **炸石开矿引发山体崩塌**
+1. 矿坑排水毁坏农田
+2. 煤矿自燃污染大气环境
+3. 矿井倒塌造成房屋龟裂
+4. 采矿活动破坏植被
+5. 炸石开矿引发山体崩塌
 
 ### 矿产资源的保护资源
 
-1. **有计划地勘察，合理开发：先确定矿产的分布位置、多寡，地质情况**
-2. **综合利用**
-3. **严格执行国家的资源法**
+1. 有计划地勘(kān)察，合理开发：先确定矿产的分布位置、多寡，地质情况
+2. 综合利用
+3. 严格执行国家的资源法
 
 
 
@@ -263,3 +278,7 @@
 `yay settle liao. tmr 测验 let's goooooo `
 
 `by jiahuiiiii @24 Feb 2022 23:11`
+
+`yay tmr 年中考, just gambatehhhh`
+
+`by jiahuiiiii @26 Jun 2022 15:36`
