--- a/Geography Notes/J3 Geography Notes/4. 我们周围的能源.md
+++ b/Geography Notes/J3 Geography Notes/4. 我们周围的能源.md
@@ -25,7 +25,7 @@
 
 ### 4.2.1 煤
 
-![image-20220321163405561](C:\Users\wongj\Documents\Typora\Geography Notes\J3 Geography Notes\image-20220321163405561.png)
+![煤的分布](https://i.ibb.co/1vZjpR6/image.png)
 
 - 世界主要煤矿产区：
   - 美国的**阿伯拉契安山地**
@@ -49,7 +49,7 @@
 
 ### 4.2.2 石油和天然气
 
-![image-20220321164248972](C:\Users\wongj\Documents\Typora\Geography Notes\J3 Geography Notes\image-20220321164248972.png)
+![石油和天然气的分布](https://i.ibb.co/MZrq0Rf/image.png)
 
 - 世界主要的石油产区
   - **波斯湾沿岸**
